--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,3 +55,4 @@ jobs:
           git pull origin master
           dotnet publish ./Organizacional.csproj --configuration Release --framework net8.0 --runtime linux-x64 --output ./publish --no-self-contained
           sudo systemctl restart organiza.service
+        timeout: 300
