--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,5 +54,7 @@ jobs:
           git reset --hard origin/master
           git pull origin master
           dotnet publish ./Organizacional.csproj --configuration Release --framework net8.0 --runtime linux-x64 --output ./publish --no-self-contained
+          echo "Publicación completada"
           sudo systemctl restart organiza.service
-        timeout: 300
+          echo "Servicio reiniciado"
+        timeout: "300s"
